fix: resolve page overflow-x by adjusting container styles

--- a/assets/css/global-style.css
+++ b/assets/css/global-style.css
@@ -1,5 +1,6 @@
 .container {
   padding-inline: 5vw;
+  overflow-x: hidden;
 }
 .container-xl {
   padding-inline: 2vw;
